<resources>
    <string name="app_name">ShoeStore</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="email_text">Please enter your email</string>
    <string name="password_text">Please enter your password</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="lets_start">Let\'s start!</string>
    <string name="welcome_title">Welcome to our Shoe Store!</string>
    <string name="welcome_text">Thank you for choosing us!\n\We are so excited to have you on board. So let\'s not waste more time and start browsing our inventory!</string>
    <string name="instruction_title">Instruction</string>
    <string name="instruction_text">Our inventory is made to ease your effort in shoe finding!\n\ Simply SCROLL through our inventory list and TAP on an image to select a shoe you like to see it\'s details, sizes and more. It\'s as easy as that!</string>
    <string name="instruction_button_text">Got it!</string>
    <string name="title_instruction">Instruction</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_title_header">Welcome</string>
    <string name="logout">Logout</string>
    <string name="new_shoe_label">Add new shoe</string>
    <string name="shoe_name">Shoe Name</string>
    <string name="shoe_company">Shoe Company</string>
    <string name="shoe_size">Shoe Size</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="shoe_list_label">Shoe List</string>
    <string name="add_shoe_label">Add Shoe</string>
</resources>
